[gd_scene load_steps=6 format=2]

[ext_resource path="res://Lexical/Dict/dict-background.png" type="Texture" id=1]
[ext_resource path="res://Lexical/Alphabet/Alphabet.gd" type="Script" id=2]
[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/pressFtoExit.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 3 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -80.0
margin_right = 140.0
margin_bottom = 81.0
rect_clip_content = true
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = -80.0
margin_right = 139.5
margin_bottom = 80.0
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NumbersLabel" type="Node2D" parent="."]

[node name="Label" type="Label" parent="NumbersLabel"]
margin_right = 43.0
margin_bottom = 47.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Numbers
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccentsLabel" type="Node2D" parent="."]

[node name="Label" type="Label" parent="AccentsLabel"]
margin_right = 40.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Accents"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HCLabel" type="Node2D" parent="."]

[node name="Label" type="Label" parent="HCLabel"]
margin_right = 109.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "High Class Consonants"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VowelsLabel" type="Node2D" parent="."]

[node name="Label" type="Label" parent="VowelsLabel"]
margin_right = 40.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Vowels"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MCLabel" type="Node2D" parent="."]

[node name="Label" type="Label" parent="MCLabel"]
margin_right = 106.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Mid Class Consonants"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LCLabel" type="Node2D" parent="."]

[node name="Label" type="Label" parent="LCLabel"]
margin_right = 109.0
margin_bottom = 22.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Low Class Consonants"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" parent="." instance=ExtResource( 4 )]
margin_top = -3.69312
margin_bottom = 18.3069
